YUK-11813 Move StarsDatabaseCache from common to yukon-web
Remove getDefaultTimeZone and getDefaultDateTimeZone from LiteStarsEnergyCompany